--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://peat-twig-94a.notion.site/Chirag-Data-Science-Portfolio-20b7dabd9ff2803fa5dce767102ac38c?source=copy_link" />
+    <meta http-equiv="refresh" content="0; url=https://peat-twig-94a.notion.site/Chirag-Data-Science-Portfolio-20b7dabd9ff2803fa5dce767102ac38c" />
   </head>
   <body>
-    <p>Redirecting to <a href="https://peat-twig-94a.notion.site/Chirag-Data-Science-Portfolio-20b7dabd9ff2803fa5dce767102ac38c?source=copy_link">Notion</a>...</p>
+    <p>Redirecting to <a href="https://peat-twig-94a.notion.site/Chirag-Data-Science-Portfolio-20b7dabd9ff2803fa5dce767102ac38c">Notion</a>...</p>
   </body>
 </html>
